[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/paritytech/polkadot-bulletin-chain.git"

[workspace.dependencies]
# Non-SDK dependencies
array-bytes = { version = "6.1" }
cfg-if = { version = "1.0" }
cid = { version = "0.11.1", default-features = false }
clap = { version = "4.2.5" }
codec = { package = "parity-scale-codec", version = "3.7.5", default-features = false }
futures = { version = "0.3.21" }
hex = { version = "0.4" }
jsonrpsee = { version = "0.24.3" }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.11.6", default-features = false }
serde = { version = "1.0.126", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
static_assertions = { version = "1.1" }
tracing = { version = "0.1.41", default-features = false }

# Local workspace members
bulletin-polkadot-runtime = { path = "runtimes/bulletin-polkadot" }
bulletin-westend-runtime = { path = "runtimes/bulletin-westend" }
pallet-relayer-set = { path = "pallets/relayer-set", default-features = false }
pallet-transaction-storage = { path = "pallets/transaction-storage", default-features = false }
pallet-validator-set = { path = "pallets/validator-set", default-features = false }
pallets-common = { path = "pallets/common", default-features = false }

# Polkadot SDK Umbrella Crate - replaces 92 individual dependencies
# Use features = ["runtime"] for pallets/runtimes, features = ["node"] for node
polkadot-sdk = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "c7b9c08825acc61f1adde54535a41855c04962a2", default-features = false }
# FRAME prelude for pallets - direct dependency required because pallet macros use $crate paths
polkadot-sdk-frame = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "c7b9c08825acc61f1adde54535a41855c04962a2", default-features = false }

# SDK crates available in umbrella but needed as individual deps by local pallets (which use polkadot-sdk-frame, not the full umbrella)
sp-transaction-storage-proof = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "c7b9c08825acc61f1adde54535a41855c04962a2", default-features = false }
sp-staking = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "c7b9c08825acc61f1adde54535a41855c04962a2", default-features = false }
# pallet-session needs "historical" feature for pallet-validator-set (can't pass crate-specific features through umbrella)
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "c7b9c08825acc61f1adde54535a41855c04962a2", default-features = false }
# sp-api needed individually for disable-logging feature in on-chain-release-build
sp-api = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "c7b9c08825acc61f1adde54535a41855c04962a2", default-features = false }
# pallet-bridge-messages needs "test-helpers" feature for test utilities (can't pass crate-specific features through umbrella)
pallet-bridge-messages = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "c7b9c08825acc61f1adde54535a41855c04962a2", default-features = false }

# Crates excluded from umbrella (must remain as individual dependencies)
bp-bridge-hub-cumulus = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "c7b9c08825acc61f1adde54535a41855c04962a2", default-features = false }
# TODO: remove this and replace with local runtime/src/bridge-primitives
bp-polkadot-bulletin = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "c7b9c08825acc61f1adde54535a41855c04962a2", default-features = false }
westend-runtime-constants = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "c7b9c08825acc61f1adde54535a41855c04962a2", default-features = false }
# Needed for register_validate_block! macro and transaction-index feature in bulletin-westend-runtime
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "c7b9c08825acc61f1adde54535a41855c04962a2", default-features = false }
# Needed for westend-specific constants with westend feature (can't pass crate-specific features through umbrella)
testnet-parachains-constants = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "c7b9c08825acc61f1adde54535a41855c04962a2", default-features = false }

# XCM emulator framework for integration tests (not available through umbrella)
asset-hub-westend-emulated-chain = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "c7b9c08825acc61f1adde54535a41855c04962a2", default-features = true }
asset-hub-westend-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "c7b9c08825acc61f1adde54535a41855c04962a2", default-features = true }
westend-emulated-chain = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "c7b9c08825acc61f1adde54535a41855c04962a2", default-features = true }
westend-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "c7b9c08825acc61f1adde54535a41855c04962a2", default-features = true }

# Build utility - needed directly for metadata-hash feature (not available through umbrella)
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk.git", rev = "c7b9c08825acc61f1adde54535a41855c04962a2" }

[workspace]
resolver = "2"
members = [
	"node",
	"pallets/common",
	"pallets/relayer-set",
	"pallets/transaction-storage",
	"pallets/validator-set",
	"runtimes/bulletin-polkadot",
	"runtimes/bulletin-westend",
	"runtimes/bulletin-westend/integration-tests",
]
[profile.release]
# Polkadot runtime requires unwinding.
opt-level = 3
panic = "unwind"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[workspace.lints.rust]
# `substrate_runtime` is a common `cfg` condition name used in polkadot-sdk.
unexpected_cfgs = { level = "warn", check-cfg = [
	'cfg(substrate_runtime)',
] }

