[package]
name = "polkadot-bulletin-chain"
version = "1.1.0"
description = "Polkadot Bulletin Chain node"
authors = ["Parity Technologies <admin@parity.io>"]
edition.workspace = true
license = "MIT-0"
publish = false
repository.workspace = true
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "polkadot-bulletin-chain"

[dependencies]
clap = { features = ["derive"], workspace = true }
futures = { features = ["thread-pool"], workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

sc-chain-spec = { workspace = true }
frame-support = { workspace = true, optional = true }
frame-system-rpc-runtime-api = { workspace = true }
frame-try-runtime = { workspace = true, optional = true }
pallet-transaction-payment = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-babe = { workspace = true }
sc-consensus-babe-rpc = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sc-consensus-grandpa-rpc = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-offchain = { workspace = true }
sc-rpc = { workspace = true }
sc-service = { workspace = true }
sc-sync-state-rpc = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-consensus = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-io = { workspace = true }
sp-keystore = { workspace = true }
sp-runtime = { workspace = true }
sp-timestamp = { workspace = true }
sp-transaction-storage-proof = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }
sp-session = { workspace = true }
sp-offchain = { workspace = true }

# These dependencies are used for the node's RPCs
jsonrpsee = { features = ["server"], workspace = true }
sc-basic-authorship = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-genesis-builder = { workspace = true }
sp-weights = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
polkadot-primitives = { workspace = true }
substrate-frame-rpc-system = { workspace = true }

# These dependencies are used for runtime benchmarking
frame-benchmarking-cli = { workspace = true }
frame-benchmarking = { optional = true, workspace = true, default-features = true }

# Local Dependencies
# Rococo testnet
polkadot-bulletin-chain-runtime = { workspace = true }
# Polkadot production
bulletin-polkadot-runtime = { workspace = true }

# TODO: remove when bulletin-polkadot is upgraded live with TX storage runtime API
pallet-transaction-storage = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
# Dependencies that are only required if runtime benchmarking should be built.
runtime-benchmarks = [
	"bulletin-polkadot-runtime/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	"polkadot-bulletin-chain-runtime/runtime-benchmarks",
	"polkadot-primitives/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"bulletin-polkadot-runtime/try-runtime",
	"frame-support/try-runtime",
	"frame-try-runtime/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"polkadot-bulletin-chain-runtime/try-runtime",
	"sp-runtime/try-runtime",
]
