[package]
name = "polkadot-bulletin-chain"
version = "1.1.0"
description = "Polkadot Bulletin Chain node"
authors = ["Parity Technologies <admin@parity.io>"]
edition.workspace = true
license = "MIT-0"
publish = false
repository.workspace = true
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "polkadot-bulletin-chain"

[dependencies]
clap = { features = ["derive"], workspace = true }
futures = { features = ["thread-pool"], workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
jsonrpsee = { features = ["server"], workspace = true }

# Polkadot SDK umbrella crate - using specific features instead of "node" to avoid
# pulling in unnecessary crates like assets-common which has runtime-benchmarks issues
polkadot-sdk = { workspace = true, features = [
	# Benchmarking
	"frame-benchmarking",
	"frame-benchmarking-cli",
	# Frame
	"frame-support",
	"frame-system-rpc-runtime-api",
	"frame-try-runtime",
	# Pallets
	"pallet-transaction-payment",
	"pallet-transaction-payment-rpc",
	# Polkadot
	"polkadot-primitives",
	# Substrate client
	"sc-basic-authorship",
	"sc-chain-spec",
	"sc-cli",
	"sc-client-api",
	"sc-consensus",
	"sc-consensus-babe",
	"sc-consensus-babe-rpc",
	"sc-consensus-grandpa",
	"sc-consensus-grandpa-rpc",
	"sc-executor",
	"sc-network",
	"sc-offchain",
	"sc-rpc",
	"sc-service",
	"sc-sync-state-rpc",
	"sc-telemetry",
	"sc-transaction-pool",
	"sc-transaction-pool-api",
	# Substrate primitives
	"sp-api",
	"sp-block-builder",
	"sp-blockchain",
	"sp-consensus",
	"sp-consensus-babe",
	"sp-consensus-grandpa",
	"sp-core",
	"sp-genesis-builder",
	"sp-inherents",
	"sp-io",
	"sp-keystore",
	"sp-offchain",
	"sp-runtime",
	"sp-session",
	"sp-timestamp",
	"sp-transaction-pool",
	"sp-transaction-storage-proof",
	"sp-version",
	"sp-weights",
	# RPC
	"substrate-frame-rpc-system",
] }

# Local Dependencies
bulletin-polkadot-runtime = { workspace = true }
# TODO: remove when bulletin-polkadot is upgraded live with TX storage runtime API
pallet-transaction-storage = { workspace = true }

[build-dependencies]
polkadot-sdk = { workspace = true, features = ["substrate-build-script-utils"] }

[features]
default = ["std"]
std = [
	"serde/std",
	"tracing/std",
	"bulletin-polkadot-runtime/std",
	"pallet-transaction-storage/std",
	"polkadot-sdk/std",
]
runtime-benchmarks = [
	"bulletin-polkadot-runtime/runtime-benchmarks",
	"pallet-transaction-storage/runtime-benchmarks",
	"polkadot-sdk/runtime-benchmarks",
]
try-runtime = [
	"bulletin-polkadot-runtime/try-runtime",
	"pallet-transaction-storage/try-runtime",
	"polkadot-sdk/try-runtime",
]
